completed part 2c Header Sass Module

--- a/assets/sass/components/header/index.scss
+++ b/assets/sass/components/header/index.scss
@@ -1,6 +1,6 @@
-//
-// Site Header
-//==============================================
+/* # Site Header
+  --------------------------------------------- */
+
 @import "base";
-@import "title-area";
+@import "title-area/index";
 @import "header-right";
