--- a/assets/sass/components/header/_header-right.scss
+++ b/assets/sass/components/header/_header-right.scss
@@ -4,9 +4,9 @@
 .site-header .widget-area {
     float: right;
     text-align: right;
-    width: 800px;
+    width: $headerRight__Width;
     @media only screen and (max-width: 1200px) {
-        width: 620px;
+        width: $headerRight__LaptopWidth;
     }
     @media only screen and (max-width: 1023px) {
         text-align: center;
