--- a/assets/sass/components/navigation/_accessible-menu.scss
+++ b/assets/sass/components/navigation/_accessible-menu.scss
@@ -20,8 +20,8 @@
     visibility: hidden;
     @media only screen and (max-width: 1023px) {
         border-width: 0;
-        background-color: #fff;
-        color: #333;
+        background-color: $navToggle__BackgroundColor;
+        color: $navToggle__TextColor;
         display: block;
         margin: 0 auto;
         overflow: hidden;
@@ -45,7 +45,7 @@
         &:before {
             display: inline-block;
             text-rendering: auto;
-            transform: translate(0, 0);
+            @include transform (translate(0, 0));
         }
         &.activated:before {
             content: "\f142";
@@ -65,7 +65,7 @@
         &.activated:before {
             margin-right: 10px;
             text-rendering: auto;
-            transform: translate(0, 0);
+            @include transform (translate(0, 0));
         }
     }
 }
