--- a/assets/sass/components/navigation/_breadcrumbs.scss
+++ b/assets/sass/components/navigation/_breadcrumbs.scss
@@ -2,9 +2,8 @@
   --------------------------------------------- */
 
 .breadcrumb {
-    background-color: #fff;
-    font-size: 16px;
-    font-size: 1.6rem;
+    background-color: $breadcrumbs_BackgroundColor;
+    font-size: rem ( $breadcrumbs_FontSize);
     margin-bottom: 1px;
     padding: 12px 30px;
 }
