--- a/assets/sass/components/navigation/_pagination.scss
+++ b/assets/sass/components/navigation/_pagination.scss
@@ -13,28 +13,29 @@
     margin-bottom: 0;
 }
 
-li {
-    display: inline;
+.archive-pagination {
+    li {
+        display: inline;
+        @media only screen and (max-width: 860px) {
+            a {
+                margin-bottom: 4px;
+            }
+        }
+    }
     a {
-        background-color: #fff;
-        color: #333;
+        background-color: $archivePagination__BackgroundColor;
+        color: $archivePagination__TextColor;
         cursor: pointer;
         display: inline-block;
-        font-size: 16px;
-        font-size: 1.6rem;
+        font-size: rem( $archivePagination__FontSize);
         font-weight: 600;
         padding: 8px 12px;
         text-decoration: none;
-    }
-    @media only screen and (max-width: 860px) {
-        li a {
-            margin-bottom: 4px;
+        &:hover,
+        &:focus,
+        .active & {
+            background-color: $archivePagination__HoverBackgroundColor;
+            color: $archivePagination__HoverTextColor;
         }
-    }
-    a:hover,
-    a:focus,
-    .active & a {
-        background-color: #c3251d;
-        color: #fff;
     }
 }
