--- a/assets/sass/components/navigation/_primary.scss
+++ b/assets/sass/components/navigation/_primary.scss
@@ -3,5 +3,5 @@
 
 .nav-primary {
     background-color: $primaryNav__BackgroundColor;
-    border-top: 1px solid #eee;
+    border-top: 1px solid $primaryNav__BorderColor;
 }
