--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -1,26 +1,50 @@
+/*
+ * Base Colors
+ *-------------------------------*/
+
 $white #ffffff;
 $black #000000;
 $base__color: #333;
 $link__color: #c3251d;
 $link__hoverColor: #333;
 $body__backgroundColor: #eee;
-//
-// Navigation Colors
-//=======================================================
+
+/*
+ * Header Colors
+ *-------------------------------*/
+
+$siteHeader__BackgroundColor: $white;
+$siteTitle__LinkColor: #333;
+
+/*
+ * Navigation Colors
+ *-------------------------------*/
+
 $nav__LinkColor: #333;
 $nav__HoverColor: #c3251d;
 $submenu__BorderColor: #eee;
 $submenu__LinkBackgroundColor: $white;
 $primaryNav__BackgroundColor: $white;
+$primaryNav__BorderColor: #eee;
 $primaryNav__LinkColor: $nav__LinkColor;
 $secNav__BackgroundColor: $white;
+$primaryNav__BorderColor: #eee;
 $secNav__LinkColor: $nav__LinkColor;
 $jsNav__BackgroundColor: $white;
 $jsNav__HoverColor: $black;
 $jsNav__FocusColor: #c3251d;
-//
-// Some Other Colors
-//=======================================================
+$navToggle__BackgroundColor: $white;
+$navToggle__TextColor: #eee;
+$archivePagination__BackgroundColor: $white;
+$archivePagination__TextColor: #333;
+$archivePagination__HoverBackgroundColor: #c3251d;
+$archivePagination__HoverTextColor: $white;
+$breadcrumbs_BackgroundColor: $white;
+
+/*
+ * Some Other Colors
+ *-------------------------------*/
+
 $siteHeader__BackgroundColor: $white;
 $siteFooter__BackgroundColor: $white;
 $footerWidgets__BackgroundColor: $white;
