--- a/assets/sass/utilities/variables/_typography.scss
+++ b/assets/sass/utilities/variables/_typography.scss
@@ -1,6 +1,16 @@
-//
-// Navigation
-//============
+/*
+ * Navigation
+ *-------------------------------*/
+
 $nav__FontSize: 16;
 $submenu__FontSize: 14;
 $primaryNav__FontSize: 14;
+$archivePagination__FontSize: 16;
+
+/*
+ * Header
+ *-------------------------------*/
+
+$breadcrumbs__FontSize: 16;
+$siteTitle__FontSize: 30;
+$siteDescription__FontSize: 16;
