Genesis Starter Theme Lab part 2d

--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -42,9 +42,9 @@ $archivePagination__HoverTextColor: $white;
 $breadcrumbs_BackgroundColor: $white;
 
 /*
- * Some Other Colors
+ * Footer Colors
  *-------------------------------*/
 
-$siteHeader__BackgroundColor: $white;
 $siteFooter__BackgroundColor: $white;
 $footerWidgets__BackgroundColor: $white;
+$siteFooter__BorderColor: #eee;
