--- a/assets/sass/utilities/variables/_typography.scss
+++ b/assets/sass/utilities/variables/_typography.scss
@@ -14,3 +14,9 @@ $archivePagination__FontSize: 16;
 $breadcrumbs__FontSize: 16;
 $siteTitle__FontSize: 30;
 $siteDescription__FontSize: 16;
+
+/* Footer
+*-------------------------------*/
+
+$siteFooter__FontSize: 16;
+$footerWidgts_FontSize: 18;
