--- a/assets/sass/components/footer/_footer-widgets.scss
+++ b/assets/sass/components/footer/_footer-widgets.scss
@@ -3,8 +3,7 @@
 
 .footer-widgets {
     background-color: $footerWidgets__BackgroundColor;
-    font-size: 18px;
-    font-size: 1.8rem;
+    font-size: rem($footerWidgts_FontSize);
     clear: both;
     padding: 60px 0;
 }
@@ -12,9 +11,9 @@
 .footer-widgets-1,
 .footer-widgets-2,
 .footer-widgets-3 {
-    width: 380px;
+    width: $footerWidgets__Width;
     @media only screen and (max-width: 1200px) {
-        width: 300px;
+        width: $footerWidgets__Width_LargeScreen;
     }
     @media only screen and (max-width: 1023px) {
         width: 100%;
@@ -24,7 +23,7 @@
 .footer-widgets-1 {
     margin-right: 70px;
     @media only screen and (max-width: 1200px) {
-        width: 30px;
+        margin-right: 30px;
     }
 }
 
