--- a/assets/sass/components/footer/_site-footer.scss
+++ b/assets/sass/components/footer/_site-footer.scss
@@ -3,8 +3,8 @@
 
 .site-footer {
     background-color: $siteFooter__BackgroundColor;
-    border-top: 1px solid #eee;
-    font-size: 16px;
+    border-top: 1px solid $siteFooter__BorderColor;
+    font-size: rem( $siteFooter__FontSize);
     font-size: 1.6rem;
     line-height: 1;
     padding: 60px 0;
