--- a/assets/sass/components/header/title-area/_base.scss
+++ b/assets/sass/components/header/title-area/_base.scss
@@ -5,7 +5,7 @@
 .title-area {
     float: left;
     padding: 10px 0;
-    width: $titleArea_Width;
+    width: $titleArea__Width;
     @media only screen and (max-width: 1023px) {
         width: 100%;
         text-align: center;
