--- a/assets/sass/utilities/variables/_dimensions..scss
+++ b/assets/sass/utilities/variables/_dimensions..scss
@@ -5,7 +5,12 @@
 
 /* Header Module */
 
-$titleArea_Width: 300px;
+$titleArea__Width: 300px;
 $siteTitle__MinHeight:80px;
 $headerRight__Width:800px;
-$headerRight__LaptopWidth: 620px; //1200px
+$headerRight__Width_LargeScreen: 620px; //1200px
+
+/* Footer Module */
+
+$footerWidgets__Width: 380px;
+$footerWidgets__Width_LargeScreen: 300px; //1200px
