completed KnowTheCode Developers Genesis Starter Theme Part 2e

--- a/assets/sass/components/content/_after-entry.scss
+++ b/assets/sass/components/content/_after-entry.scss
@@ -2,9 +2,8 @@
   --------------------------------------------- */
 
 .after-entry {
-    background-color: #fff;
-    font-size: 18px;
-    font-size: 1.8rem;
+    background-color: $afterEntry__BackgroundColor;
+    font-size: rem( $afterEntry__FontSize);
     margin-bottom: 40px;
     padding: 60px;
     @media screen and (max-width: 860px) {
