--- a/assets/sass/components/content/index.scss
+++ b/assets/sass/components/content/index.scss
@@ -2,8 +2,8 @@
   ---------------------------------------------------------------------------------------------------- */
 
 @import "base";
-@import "entry-header";
+@import "entry-header/index";
 @import "entry-content";
-@import "entry-footer";
+@import "entry-footer/index";
 @import "after-entry";
 @import "author-box";
