--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -48,3 +48,15 @@ $breadcrumbs_BackgroundColor: $white;
 $siteFooter__BackgroundColor: $white;
 $footerWidgets__BackgroundColor: $white;
 $siteFooter__BorderColor: #eee;
+
+/*
+ * Entry Content Colors
+ *-------------------------------*/
+
+$entryFooter__Meta__BorderColor: #eee;
+$entry__BackgroundColor: $white;
+$entryTitle__LinkColor: #333;
+$entryTitle__HoverColor: #c3251d;
+$afterEntry__BackgroundColor: $white;
+$entryContent__Code__BackgroundColor: #eee;
+$entryContent__Code__Color: #333;
