--- a/assets/sass/utilities/variables/_typography.scss
+++ b/assets/sass/utilities/variables/_typography.scss
@@ -15,8 +15,19 @@ $breadcrumbs__FontSize: 16;
 $siteTitle__FontSize: 30;
 $siteDescription__FontSize: 16;
 
-/* Footer
-*-------------------------------*/
+/*
+ * Footer
+ *-------------------------------*/
 
 $siteFooter__FontSize: 16;
 $footerWidgts_FontSize: 18;
+
+/*
+ * Entry Content
+ *-------------------------------*/
+
+$entryMeta_FontSize: 16;
+$entryMeta__Header__FontSize: 16;
+$entryMeta__Footer__FontSize: 16;
+$entryTitle__FontSize: 36;
+$afterEntry__FontSize: 18;
