--- a/assets/sass/components/archive/_base.scss
+++ b/assets/sass/components/archive/_base.scss
@@ -10,12 +10,15 @@
     p:last-child {
         margin-bottom: 0;
     }
-    .entry-title,
-    .archive-title {
-        font-size: 20px;
-    }
     @media screen and (max-width: 860px) {
         padding: 30px;
         margin-bottom: 5%;
     }
+    .entry-title {
+        font-size: 20px;
+    }
+}
+
+.archive-title {
+    font-size: 20px;
 }
