Finished Lab Part 2f

--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -60,3 +60,9 @@ $entryTitle__HoverColor: #c3251d;
 $afterEntry__BackgroundColor: $white;
 $entryContent__Code__BackgroundColor: #eee;
 $entryContent__Code__Color: #333;
+
+/*
+ * Entry Content Colors
+ *-------------------------------*/
+
+$comment__BackgroundColor: $white;
