--- a/assets/sass/components/comments/_base.scss
+++ b/assets/sass/components/comments/_base.scss
@@ -1,9 +1,12 @@
+/*
+ * Comments base styling
+ *-------------------------------*/
+
 .comment-respond,
 .entry-comments,
 .entry-pings {
-    background-color: #fff;
-    font-size: 16px;
-    font-size: 1.6rem;
+    background-color: $comment__BackgroundColor;
+    font-size: rem( $comments__FontSize);
     margin-bottom: 40px;
     @media only screen and (max-width: 860px) {
         padding: 30px;
