finished Part 2g Widgets Sass Module

--- a/assets/sass/components/index.scss
+++ b/assets/sass/components/index.scss
@@ -1,6 +1,7 @@
-//
-// Component Modules
-//==============================================
+/*
+ * Widgets
+ *-------------------------------*/
+
 @import "buttons";
 @import "accessibility/index";
 @import "header/index";
