--- a/assets/sass/components/widgets/_featured-content.scss
+++ b/assets/sass/components/widgets/_featured-content.scss
@@ -10,7 +10,6 @@
         }
     }
     .entry-title {
-        font-size: 20px;
-        font-size: 2rem;
+        font-size: rem( $featuredContent__EntryTitle__FontSize);
     }
 }
