--- a/assets/sass/utilities/variables/_typography.scss
+++ b/assets/sass/utilities/variables/_typography.scss
@@ -31,3 +31,16 @@ $entryMeta__Header__FontSize: 16;
 $entryMeta__Footer__FontSize: 16;
 $entryTitle__FontSize: 36;
 $afterEntry__FontSize: 18;
+
+/*
+ * Comments
+ *-------------------------------*/
+
+$comments__FontSize: 16;
+
+/*
+ * Widgets
+ *-------------------------------*/
+
+$widgetTitle__FontSize: 18;
+$featuredContent__EntryTitle__FontSize: 20;
