--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -72,3 +72,15 @@ $comment__BackgroundColor: $white;
  *-------------------------------*/
 
 $widgetTitle__LinkColor: #333;
+
+/*
+ * Plugins
+ *-------------------------------*/
+
+$enews__Color: $white;
+$enews__BackgroundColor: #333;
+$enews__InputBorderColor: #333;
+$enews__submitButton__BackgroundColor:#c3251d;
+$enews__submitButton__Color: $white;
+$enews__submitButton__BackgroundHoverColor:$enews__submitButton__Color;
+$enews__submitButton__HoverColor: $enews__submitButton__BackgroundColor;
