--- a/assets/sass/layouts/_site-containers.scss
+++ b/assets/sass/layouts/_site-containers.scss
@@ -4,15 +4,15 @@
 .site-inner,
 .wrap {
     margin: 0 auto;
-    max-width: 1280px;
-    @media screen and (max-width: 1340px) {
-        max-width: 1140px;
+    max-width: $maxWidth; //1280
+    @media screen and (max-width: $largerScreen) {
+        max-width: $maxWidth__LargerScreen;
     }
-    @media screen and (max-width: 1200px) {
-        max-width: 960px;
+    @media screen and (max-width: $largeScreen) {
+        max-width: $maxWidth__LargeScreen;
     }
-    @media screen and (max-width: 1023px) {
-        max-width: 800px;
+    @media screen and (max-width: $mediumScreen) {
+        max-width: $maxWidth__MediumScreen;
     }
 }
 
@@ -20,18 +20,18 @@
     clear: both;
     padding-top: 40px;
     word-wrap: break-word;
-    @media screen and (max-width: 860px) {
+    @media screen and (max-width: $smallScreen) {
         padding: 5% 5% 0;
     }
 }
 
 .wrap {
-    @media screen and (max-width: 860px) {
+    @media screen and (max-width: $smallScreen) {
         padding-left: 5%;
         padding-right: 5%;
     }
 }
 
 .landing-page .site-inner {
-    max-width: 800px;
+    max-width: $maxWidth__LandingPage;
 }
