--- a/assets/sass/layouts/column-widths-positions/_secondary-sidebar.scss
+++ b/assets/sass/layouts/column-widths-positions/_secondary-sidebar.scss
@@ -3,12 +3,7 @@
 .sidebar-secondary {
     float: left;
     width: 180px;
-    width: 660px;
-    @media only screen and (max-width: 1023px) {
-        width: 100%;
+    .content-sidebar-sidebar & {
+        float: right;
     }
-}
-
-.content-sidebar-sidebar .sidebar-secondary {
-    float: right;
 }
