--- a/assets/sass/utilities/variables/_typography.scss
+++ b/assets/sass/utilities/variables/_typography.scss
@@ -44,3 +44,9 @@ $comments__FontSize: 16;
 
 $widgetTitle__FontSize: 18;
 $featuredContent__EntryTitle__FontSize: 20;
+
+/*
+ * Plugins
+ *-------------------------------*/
+
+$enews__FontSize: 16;
