--- a/assets/sass/utilities/variables/index.scss
+++ b/assets/sass/utilities/variables/index.scss
@@ -1,8 +1,9 @@
 // 
 // Variable Utilities (Helpers)
 //=============================
-@import "base";
+//@import "base";
 @import "colors";
 @import "typography";
+@import "device-sizes";
 @import "dimensions";
 @import "breakpoints";
