completed Part 2j - Base and Common Classes

--- a/assets/sass/base/elements/_forms.scss
+++ b/assets/sass/base/elements/_forms.scss
@@ -4,11 +4,10 @@
 input,
 select,
 textarea {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    color: #333;
-    font-size: 18px;
-    font-size: 1.8rem;
+    background-color: $input__BackgroundColor;
+    border: 1px solid $input__BorderColor;
+    color: $input__TextColor;
+    font-size: rem ($input__FontSize);
     font-weight: 400;
     padding: 16px;
     width: 100%;
@@ -16,7 +15,7 @@ textarea {
 
 input:focus,
 textarea:focus {
-    border: 1px solid #ddd;
+    border: 1px solid $input__FocusBorderColor;
     outline: none;
 }
 
@@ -27,12 +26,12 @@ input[type="radio"] {
 }
 
  ::-moz-placeholder {
-    color: #333;
+    color: $input__TextColor;
     opacity: 1;
 }
 
  ::-webkit-input-placeholder {
-    color: #333;
+    color: $input__TextColor;
 }
 
 button,
@@ -40,12 +39,11 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"],
 .button {
-    background-color: #333;
+    background-color: $button__BackgroundColor;
     border: 0;
-    color: #fff;
+    color: $button__TextColor;
     cursor: pointer;
-    font-size: 16px;
-    font-size: 1.6rem;
+    font-size: rem($button__FontSize);
     font-weight: 700;
     padding: 16px 24px;
     text-decoration: none;
@@ -63,15 +61,15 @@ input:focus[type="button"],
 input:focus[type="reset"],
 input:focus[type="submit"],
 .button:focus {
-    background-color: #c3251d;
-    color: #fff;
+    background-color: $button__HoverBackgroundColor;
+    color: $button__HoverTextColor;
 }
 
 .entry-content {
     .button {
         &:hover,
         &:focus {
-            color: #fff;
+            color: $button__TextColor;
         }
     }
 }
@@ -99,9 +97,9 @@ input[type="submit"].small {
     input[type="reset"]:disabled:hover,
     input[type="submit"]:disabled,
     input[type="submit"]:disabled:hover {
-        background-color: #eee;
+        background-color: $button__DisabledBackgroundColor;
         border-width: 0;
-        color: #777;
+        color: $button__DisabledTextColor;
         cursor: not-allowed;
     }
 }
