--- a/assets/sass/base/elements/index.scss
+++ b/assets/sass/base/elements/index.scss
@@ -3,7 +3,7 @@
 
 @import "defaults";
 @import "lists";
-@import "blockquotes";
+@import "blockquote";
 @import "headings";
 @import "objects";
 @import "forms";
