--- a/assets/sass/components/header/title-area/_site-title.scss
+++ b/assets/sass/components/header/title-area/_site-title.scss
@@ -5,7 +5,7 @@
 .site-title {
     font-size: rem($siteTitle__FontSize);
     font-weight: 700;
-    line-height: 1.2;
+    line-height: $siteTitle__LineHeight;
     a,
     a:hover,
     a:focus {
