--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -29,4 +29,4 @@
 @import "components/comments/index";
 @import "components/sidebars/index";
 @import "components/footer/index";
-@import "components/archive/index";
+@import "views/index";
