--- a/assets/sass/base/elements/_accessibility.scss
+++ b/assets/sass/base/elements/_accessibility.scss
@@ -23,8 +23,8 @@
     font-size: 1em;
     font-weight: bold;
     padding: 15px 23px 14px;
-    color: #333;
-    background: #fff;
+    color: $input__TextColor;
+    background: $input__BackgroundColor;
     z-index: 100000;
     /* Above WP toolbar. */
     text-decoration: none;
@@ -33,77 +33,4 @@
 
 .more-link {
     position: relative;
-}
-
-a {
-    &.alignnone {
-        display: inline-block;
-    }
-    &.alignleft,
-    &.alignnone,
-    &.alignright {
-        max-width: 100%;
-    }
-    &.aligncenter img {
-        display: block;
-        margin: 0 auto;
-    }
-}
-
-.alignleft {
-    float: left;
-    text-align: left;
-}
-
-.alignright {
-    float: right;
-    text-align: right;
-}
-
-img.centered,
-.aligncenter {
-    display: block;
-    margin: 0 auto 24px;
-}
-
-img.alignnone,
-.alignnone {
-    margin-bottom: 12px;
-}
-
-a.alignleft,
-img.alignleft {
-    margin: 0 24px 24px 0;
-}
-
-a.alignright,
-img.alignright {
-    margin: 0 0 24px 24px;
-}
-
-.wp-caption.alignright {
-    margin: 0 0 24px 24px;
-}
-
-.wp-caption.alignleft {
-    margin: 0 24px 24px 0;
-}
-
-.wp-caption-text {
-    font-size: 14px;
-    font-size: 1.4rem;
-    font-weight: 600;
-    margin: 0;
-    text-align: center;
-}
-
-.entry-content {
-    p.wp-caption-text {
-        margin-bottom: 0;
-    }
-    .wp-audio-shortcode,
-    .wp-playlist,
-    .wp-video {
-        margin: 0 0 28px;
-    }
 }
