--- a/assets/sass/base/elements/_blockquote.scss
+++ b/assets/sass/base/elements/_blockquote.scss
@@ -3,8 +3,7 @@ blockquote {
     &::before {
         content: "\201C";
         display: block;
-        font-size: 30px;
-        font-size: 3rem;
+        font-size: rem($blockquote__FontSize);
         height: 0;
         left: -20px;
         position: relative;
