--- a/assets/sass/base/elements/_default.scss
+++ b/assets/sass/base/elements/_default.scss
@@ -1,33 +1,7 @@
-/* ## Typographical Elements
+/* ## Default Elements
   --------------------------------------------- */
 
-html {
-    font-size: 62.5%;
-    /* 10px browser default */
-}
-
-body {
-    background-color: #eee;
-    color: #333;
-    font-family: "Source Sans Pro", sans-serif;
-    font-size: 20px;
-    font-size: 2rem;
-    -webkit-font-smoothing: antialiased;
-    font-weight: 400;
-    line-height: 1.625;
-    margin: 0;
-    /* Chrome fix */
-    @media screen and (max-width: 860px) {
-        font-size: 18px;
-    }
-    >div {
-        font-size: 2rem;
-        @media screen and (max-width: 860px) {
-            font-size: 1.8rem;
-        }
-    }
-}
-
+@import "body";
 a,
 button,
 input:focus,
@@ -37,15 +11,15 @@ input[type="submit"],
 textarea:focus,
 .button,
 .gallery img {
-    transition: all 0.1s ease-in-out;
+    @include transition (all 0.1s ease-in-out);
 }
 
 a {
-    color: #c3251d;
+    color: $link__color;
     text-decoration: underline;
     &:hover,
     &:focus {
-        color: #333;
+        color: $link__hoverColor;
         text-decoration: none;
     }
 }
@@ -58,7 +32,7 @@ p {
 hr {
     border: 0;
     border-collapse: collapse;
-    border-top: 1px solid #eee;
+    border-top: 1px solid $hr__BorderColor;
     clear: both;
     margin: 1em 0;
 }
