--- a/assets/sass/base/elements/_gallery.scss
+++ b/assets/sass/base/elements/_gallery.scss
@@ -59,11 +59,11 @@
 }
 
 .gallery img {
-    border: 1px solid #eee;
+    border: 1px solid $galleryImage__BorderColor;
     height: auto;
     padding: 4px;
     &:hover,
     &:focus {
-        border: 1px solid #999;
+        border: 1px solid $galleryImage__HoverBorderColor;
     }
 }
