--- a/assets/sass/components/comments/_base.scss
+++ b/assets/sass/components/comments/_base.scss
@@ -8,7 +8,7 @@
     background-color: $comment__BackgroundColor;
     font-size: rem( $comments__FontSize);
     margin-bottom: 40px;
-    @media only screen and (max-width: 860px) {
+    @media only screen and (max-width: $smallScreen) {
         padding: 30px;
         margin-bottom: 5%;
     }
