--- a/assets/sass/components/content/_base.scss
+++ b/assets/sass/components/content/_base.scss
@@ -5,7 +5,7 @@
     background-color: $entry__BackgroundColor;
     margin-bottom: 40px;
     padding: 70px 80px;
-    @media only screen and (max-width: 860px) {
+    @media only screen and (max-width: $smallScreen) {
         padding: 30px;
         margin-bottom: 5%;
     }
