--- a/assets/sass/components/header/_base.scss
+++ b/assets/sass/components/header/_base.scss
@@ -6,7 +6,7 @@
       >.wrap {
           padding: 20px 0;
       }
-      @media only screen and (max-width: 1023px) {
+      @media only screen and (max-width: $mediumScreen) {
           .wrap {
               padding-left: 5%;
               padding-right: 5%;
