--- a/assets/sass/components/header/title-area/_header-image.scss
+++ b/assets/sass/components/header/title-area/_header-image.scss
@@ -3,7 +3,7 @@
         margin: 0 auto;
         max-width: $titleArea_Width;
         padding: 0;
-        @media only screen and (max-width: 1023px) {
+        @media only screen and (max-width: $mediumScreen) {
             float: none;
         }
     }
