--- a/assets/sass/components/header/title-area/_site-description.scss
+++ b/assets/sass/components/header/title-area/_site-description.scss
@@ -5,7 +5,7 @@
 .site-description {
     font-size: rem( $siteDescription__FontSize);
     font-weight: 400;
-    line-height: 1.5;
+    line-height: $siteDescription__LineHeight;
 }
 
 .site-description,
