--- a/assets/sass/components/index.scss
+++ b/assets/sass/components/index.scss
@@ -2,12 +2,15 @@
  * Widgets
  *-------------------------------*/
 
-@import "buttons";
+@import "avatar";
+//@import "buttons";
 @import "accessibility/index";
+@import "author-box";
+@import "comments/index";
+@import "content/index";
+@import "after-entry/index";
+@import "footer/index";
 @import "header/index";
 @import "navigation/index";
-@import "content/index";
-@import "comments/index";
 @import "sidebars/index";
 @import "widgets/index";
-@import "footer/index";
