--- a/assets/sass/components/navigation/_base.scss
+++ b/assets/sass/components/navigation/_base.scss
@@ -7,7 +7,7 @@
     font-weight: 600;
     line-height: 1;
     width: 100%;
-    @media only screen and (max-width: 1023px) {
+    @media only screen and (max-width: $mediumScreen) {
         text-align: center;
         li,
         .site-header ul& {
