--- a/assets/sass/components/navigation/_js-enabled.scss
+++ b/assets/sass/components/navigation/_js-enabled.scss
@@ -1,7 +1,7 @@
 //
 // .js enabled styles
 //=======================
-@media only screen and (max-width: 1023px) {
+@media only screen and (max-width: $mediumScreen) {
     .js {
         .genesis-nav-menu {
             .sub-menu,
