--- a/assets/sass/components/widgets/_search-form.scss
+++ b/assets/sass/components/widgets/_search-form.scss
@@ -11,7 +11,7 @@
     .site-header & {
         float: right;
         margin: 12px auto 0;
-        @media only screen and (max-width: 1023px) {
+        @media only screen and (max-width: $mediumScreen) {
             float: none;
             margin: 16px auto;
         }
