--- a/assets/sass/utilities/variables/_typography.scss
+++ b/assets/sass/utilities/variables/_typography.scss
@@ -1,4 +1,50 @@
 /*
+ * Common Fonts 
+ *-------------------------------*/
+
+$fontFamily__SourceSansPro: "Source Sans Pro",
+sans-serif;
+
+/*
+ * Base Typography 
+ *-------------------------------*/
+
+$html__FontSize: 62.5%;
+$base__FontFamily: $fontFamily__SourceSansPro,
+sans-serif;
+$base__FontSize: 20;
+$base__LineHeight: 1.625;
+$base__FontSize__SmallScreenWidth: 18;
+$baseDiv__FontSize: 20;
+$baseDiv__FontSize__SmallScreenWidth: 18;
+
+/*
+ * Headings 
+ *-------------------------------*/
+
+$headings__FontFamily: $fontFamily__SourceSansPro;
+$headings__LineHeight: 1.2;
+$h1__FontSize: 36;
+$h2__FontSize: 30;
+$h3__FontSize: 24;
+$h4__FontSize: 20;
+$h5__FontSize: 18;
+$h6__FontSize: 16;
+
+/*
+ * Elements 
+ *-------------------------------*/
+
+$blockquote__FontSize: 30;
+
+/*
+ * Form Elements 
+ *-------------------------------*/
+
+$input__FontSize: 18;
+$button__FontSize: 16;
+
+/*
  * Navigation
  *-------------------------------*/
 
@@ -6,14 +52,16 @@ $nav__FontSize: 16;
 $submenu__FontSize: 14;
 $primaryNav__FontSize: 14;
 $archivePagination__FontSize: 16;
+$breadcrumbs__FontSize: 16;
 
 /*
  * Header
  *-------------------------------*/
 
-$breadcrumbs__FontSize: 16;
 $siteTitle__FontSize: 30;
+$siteTitle__LineHeight: 1.2;
 $siteDescription__FontSize: 16;
+$siteDescription__LineHeight: 1.5;
 
 /*
  * Footer
@@ -39,9 +87,17 @@ $afterEntry__FontSize: 18;
 $comments__FontSize: 16;
 
 /*
+ * Author Box
+ *-------------------------------*/
+
+$authorbox__FontSize: 18;
+$authorbox__Title__FontSize: 18;
+
+/*
  * Widgets
  *-------------------------------*/
 
+$widget__FontSize: 16;
 $widgetTitle__FontSize: 18;
 $featuredContent__EntryTitle__FontSize: 20;
 
@@ -50,3 +106,10 @@ $featuredContent__EntryTitle__FontSize: 20;
  *-------------------------------*/
 
 $enews__FontSize: 16;
+
+/*
+ * Archive
+ *-------------------------------*/
+
+$archiveDescription__FontSize: 18;
+$archiveTitle__FontSize: 20;
