--- a/assets/sass/components/navigation/_js-enabled.scss
+++ b/assets/sass/components/navigation/_js-enabled.scss
@@ -1,7 +1,7 @@
 //
 // .js enabled styles
 //=======================
-@media only screen and (max-width: $mediumScreen) {
+@include media($breakpoint__screen-size--medium) {
     .js {
         .genesis-nav-menu {
             .sub-menu,
@@ -54,16 +54,16 @@
             .nav-primary,
             nav button:focus,
             .menu-toggle:focus {
-                background-color: $jsNav__BackgroundColor;
+                background-color: $js-nav--background-color;
             }
             nav button:hover,
             .menu-toggle:hover,
             .nav-primary {
-                color: $jsNav_HoverColor;
+                color: $js-nav_HoverColor;
             }
             nav button:focus,
             .menu-toggle:focus {
-                color: $jsNav__FocusColor;
+                color: $js-nav--focus-color;
             }
         }
     }
