--- a/assets/sass/utilities/index.scss
+++ b/assets/sass/utilities/index.scss
@@ -3,3 +3,5 @@
 // note: these do not compile into your style.css file
 //=======================
 @import "variables/index";
+//@import "animate/index";
+//@import "mixins/index";
