--- a/assets/sass/base/elements/_accessibility.scss
+++ b/assets/sass/base/elements/_accessibility.scss
@@ -23,8 +23,8 @@
     font-size: 1em;
     font-weight: bold;
     padding: 15px 23px 14px;
-    color: $input__TextColor;
-    background: $input__BackgroundColor;
+    color: $input--text-color;
+    background: $input--background-color;
     z-index: 100000;
     /* Above WP toolbar. */
     text-decoration: none;
