--- a/assets/sass/base/elements/_blockquote.scss
+++ b/assets/sass/base/elements/_blockquote.scss
@@ -3,7 +3,7 @@ blockquote {
     &::before {
         content: "\201C";
         display: block;
-        font-size: rem($blockquote__FontSize);
+        font-size: rem($blockquote--font-size);
         height: 0;
         left: -20px;
         position: relative;
