--- a/assets/sass/base/elements/_default.scss
+++ b/assets/sass/base/elements/_default.scss
@@ -15,11 +15,11 @@ textarea:focus,
 }
 
 a {
-    color: $link__color;
+    color: $link--color;
     text-decoration: underline;
     &:hover,
     &:focus {
-        color: $link__hoverColor;
+        color: $link--hover-color;
         text-decoration: none;
     }
 }
@@ -32,7 +32,7 @@ p {
 hr {
     border: 0;
     border-collapse: collapse;
-    border-top: 1px solid $hr__BorderColor;
+    border-top: 1px solid $hr--border-color;
     clear: both;
     margin: 1em 0;
 }
