--- a/assets/sass/components/after-entry/_base..scss
+++ b/assets/sass/components/after-entry/_base..scss
@@ -1,9 +1,9 @@
 .after-entry {
-    background-color: $afterEntry__BackgroundColor;
-    font-size: rem( $afterEntry__FontSize);
+    background-color: $after-entry--background-color;
+    font-size: rem( $after-entry--font-size);
     margin-bottom: 40px;
     padding: 60px;
-    @media screen and (max-width: $smallScreen) {
+    @media screen and (max-width: $screen-size--small) {
         padding: 30px;
         margin-bottom: 5%;
     }
