--- a/assets/sass/components/comments/_base.scss
+++ b/assets/sass/components/comments/_base.scss
@@ -5,10 +5,10 @@
 .comment-respond,
 .entry-comments,
 .entry-pings {
-    background-color: $comment__BackgroundColor;
-    font-size: rem( $comments__FontSize);
+    background-color: $comment--background-color;
+    font-size: rem( $comments--font-size);
     margin-bottom: 40px;
-    @media only screen and (max-width: $smallScreen) {
+    @include media($breakpoint__screen-size--small) {
         padding: 30px;
         margin-bottom: 5%;
     }
