--- a/assets/sass/components/content/_base.scss
+++ b/assets/sass/components/content/_base.scss
@@ -2,10 +2,10 @@
 -------------------------------------------*/
 
 .entry {
-    background-color: $entry__BackgroundColor;
+    background-color: $entry--background-color;
     margin-bottom: 40px;
     padding: 70px 80px;
-    @media only screen and (max-width: $smallScreen) {
+    @include media($breakpoint__screen-size--small) {
         padding: 30px;
         margin-bottom: 5%;
     }
