--- a/assets/sass/components/header/_base.scss
+++ b/assets/sass/components/header/_base.scss
@@ -2,11 +2,11 @@
   // Site Header Base Styles
   //==============================
   .site-header {
-      background-color: $siteHeader__BackgroundColor;
+      background-color: $site-header--background-color;
       >.wrap {
           padding: 20px 0;
       }
-      @media only screen and (max-width: $mediumScreen) {
+      @include media($breakpoint__screen-size--medium) {
           .wrap {
               padding-left: 5%;
               padding-right: 5%;
