--- a/assets/sass/components/header/_header-right.scss
+++ b/assets/sass/components/header/_header-right.scss
@@ -4,11 +4,11 @@
 .site-header .widget-area {
     float: right;
     text-align: right;
-    width: $headerRight__Width;
-    @media only screen and (max-width: $largeScreen) {
+    width: $header-right--width;
+    @include media($breakpoint__screen-size--large) {
         width: $headerRight__LaptopWidth;
     }
-    @media only screen and (max-width: $mediumScreen) {
+    @include media($breakpoint__screen-size--medium) {
         text-align: center;
         width: 100%;
     }
