--- a/assets/sass/components/header/title-area/_base.scss
+++ b/assets/sass/components/header/title-area/_base.scss
@@ -5,8 +5,8 @@
 .title-area {
     float: left;
     padding: 10px 0;
-    width: $titleArea__Width;
-    @media only screen and (max-width: $mediumScreen) {
+    width: $title-area--width;
+    @include media($breakpoint__screen-size--medium) {
         width: 100%;
         text-align: center;
     }
@@ -16,7 +16,7 @@
     }
 }
 
-@media only screen and (max-width: $mediumScreen) {
+@include media($breakpoint__screen-size--medium) {
     .site-description,
     .site-header .title-area,
     .site-header .widget-area,
