--- a/assets/sass/components/header/title-area/_header-image.scss
+++ b/assets/sass/components/header/title-area/_header-image.scss
@@ -3,7 +3,7 @@
         margin: 0 auto;
         max-width: $titleArea_Width;
         padding: 0;
-        @media only screen and (max-width: $mediumScreen) {
+        @include media($breakpoint__screen-size--medium) {
             float: none;
         }
     }
@@ -11,7 +11,7 @@
         background-position: center !important;
         background-size: contain !important;
         float: left;
-        min-height: $siteTitle__MinHeight;
+        min-height: $site-title--min-height;
         width: 100%;
     }
     .site-description,
