--- a/assets/sass/components/header/title-area/_site-title.scss
+++ b/assets/sass/components/header/title-area/_site-title.scss
@@ -3,13 +3,13 @@
  *-------------------------------*/
 
 .site-title {
-    font-size: rem($siteTitle__FontSize);
+    font-size: rem($site-title--font-size);
     font-weight: 700;
-    line-height: $siteTitle__LineHeight;
+    line-height: $site-title--line-height;
     a,
     a:hover,
     a:focus {
-        color: $siteTitle__LinkColor;
+        color: $site-title--link-color;
         text-decoration: none;
     }
 }
