--- a/assets/sass/components/navigation/_pagination.scss
+++ b/assets/sass/components/navigation/_pagination.scss
@@ -4,7 +4,7 @@
 .pagination {
     clear: both;
     margin: 40px 0;
-    @media only screen and (max-width: $smallScreen) {
+    @include media($breakpoint__screen-size--small) {
         margin: 5% auto;
     }
 }
@@ -16,26 +16,26 @@
 .archive-pagination {
     li {
         display: inline;
-        @media only screen and (max-width: $smallScreen) {
+        @include media($breakpoint__screen-size--small) {
             a {
                 margin-bottom: 4px;
             }
         }
     }
     a {
-        background-color: $archivePagination__BackgroundColor;
-        color: $archivePagination__TextColor;
+        background-color: $archive-pagination--background-color;
+        color: $archive-pagination--text-color;
         cursor: pointer;
         display: inline-block;
-        font-size: rem( $archivePagination__FontSize);
+        font-size: rem( $archive-pagination--font-size);
         font-weight: 600;
         padding: 8px 12px;
         text-decoration: none;
         &:hover,
         &:focus,
         .active & {
-            background-color: $archivePagination__HoverBackgroundColor;
-            color: $archivePagination__HoverTextColor;
+            background-color: $archive-pagination--hover-background-color;
+            color: $archive-pagination--hover-text-color;
         }
     }
 }
