--- a/assets/sass/components/widgets/_base.scss
+++ b/assets/sass/components/widgets/_base.scss
@@ -30,7 +30,7 @@
     margin-bottom: 0;
 }
 
-@media only screen and (max-width: $smallScreen) {
+@include media($breakpoint__screen-size--small) {
     .sidebar .widget {
         padding: 30px;
         margin-bottom: 5%;
