--- a/assets/sass/layouts/_site-containers.scss
+++ b/assets/sass/layouts/_site-containers.scss
@@ -4,15 +4,15 @@
 .site-inner,
 .wrap {
     margin: 0 auto;
-    max-width: $maxWidth;
-    @media screen and (max-width: $largerScreen) {
-        max-width: $maxWidth__LargerScreen;
+    max-width: $max-width;
+    @media screen and (max-width: $screen-size--larger) {
+        max-width: $max-width--larger-screen;
     }
-    @media screen and (max-width: $largeScreen) {
-        max-width: $maxWidth__LargeScreen;
+    @media screen and (max-width: $screen-size--large) {
+        max-width: $max-width--large-screen;
     }
-    @media screen and (max-width: $mediumScreen) {
-        max-width: $maxWidth__MediumScreen;
+    @media screen and (max-width: $screen-size--medium) {
+        max-width: $max-width--medium-screen;
     }
 }
 
@@ -20,18 +20,18 @@
     clear: both;
     padding-top: 40px;
     word-wrap: break-word;
-    @media screen and (max-width: $smallScreen) {
+    @media screen and (max-width: $screen-size--small) {
         padding: 5% 5% 0;
     }
 }
 
 .wrap {
-    @media screen and (max-width: $smallScreen) {
+    @media screen and (max-width: $screen-size--small) {
         padding-left: 5%;
         padding-right: 5%;
     }
 }
 
 .landing-page .site-inner {
-    max-width: $maxWidth__LandingPage;
+    max-width: $max-width__landing-page;
 }
