--- a/assets/sass/layouts/column-widths-positions/_content-sidebar-wrap.scss
+++ b/assets/sass/layouts/column-widths-positions/_content-sidebar-wrap.scss
@@ -4,12 +4,12 @@
     .content-sidebar-sidebar &,
     .sidebar-content-sidebar &,
     .sidebar-sidebar-content & {
-        width: $contentSidebarWrap__Width;
-        @media only screen and (max-width: $largerScreen) {
-            width: $contentSidebarWrap__LargerScreenWidth;
+        width: $content-sidebar-wrap--width;
+        @include media($breakpoint__screen-size--larger) {
+            width: $content-sidebar-wrap--width-larger-screen;
         }
-        @media only screen and (max-width: $largeScreen) {
-            width: $contentSidebarWrap__LargeScreenWidth;
+        @include media($breakpoint__screen-size--large) {
+            width: $content-sidebar-wrap--width-large-screen;
         }
     }
     .content-sidebar-sidebar & {
