--- a/assets/sass/layouts/column-widths-positions/_content.scss
+++ b/assets/sass/layouts/column-widths-positions/_content.scss
@@ -3,21 +3,21 @@
 .content {
     float: right;
     width: $content__Width;
-    @media only screen and (max-width: $largerScreen) {
-        width: $content_largerScreenWidth;
+    @include media($breakpoint__screen-size--larger) {
+        width: $content--width-larger-screen;
     }
-    @media only screen and (max-width: $largeScreen) {
-        width: $content_largeScreenWidth;
+    @include media($breakpoint__screen-size--large) {
+        width: $content--width-large-screen;
     }
     .content-sidebar-sidebar &,
     .sidebar-content-sidebar &,
     .sidebar-sidebar-content & {
-        width: $contentBothSidebars__Width;
-        @media only screen and (max-width: $largerScreen) {
-            width: $contentBothSidebars__LargerScreenWidth;
+        width: $content-both-sidebars--width;
+        @include media($breakpoint__screen-size--larger) {
+            width: $content-both-sidebars--width-larger-screen;
         }
-        @media only screen and (max-width: $largeScreen) {
-            width: $contentBothSidebars__LargeScreenWidth;
+        @include media($breakpoint__screen-size--large) {
+            width: $content-both-sidebars--width-large-screen;
         }
     }
     .content-sidebar &,
