--- a/assets/sass/layouts/column-widths-positions/_primary-sidebar.scss
+++ b/assets/sass/layouts/column-widths-positions/_primary-sidebar.scss
@@ -3,8 +3,8 @@
 .sidebar-primary {
     float: right;
     width: 360px;
-    @media only screen and (max-width: $largerScreen) {
-        width: $primarySidebar__LargerScreenWidth;
+    @include media($breakpoint__screen-size--larger) {
+        width: $primary-sidebar--width-larger-screen;
     }
     .sidebar-content &,
     .sidebar-sidebar-content & {
