--- a/assets/sass/layouts/columns/_full-width.scss
+++ b/assets/sass/layouts/columns/_full-width.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: $smallScreen) {
+@media screen and (max-width: $screen-size--small) {
     .five-sixths,
     .four-sixths,
     .one-fourth,
