--- a/assets/sass/plugins/_enews-extended.scss
+++ b/assets/sass/plugins/_enews-extended.scss
@@ -1,28 +1,28 @@
 .sidebar .enews-widget {
-    background-color: $enews__BackgroundColor;
+    background-color: $enews--background-color;
     &,
     .widget-title {
-        color: $enews__Color;
+        color: $enews--color;
     }
     input {
         &:focus {
-            border: 1px solid $enews__InputBorderColor;
+            border: 1px solid $enews__input--border-color;
         }
         &[type="submit"] {
-            background-color: $enews__submitButton__BackgroundColor;
-            color: $enews__submitButton__Color;
+            background-color: $enews__submit-button--background-color;
+            color: $enews__submit-button--color;
         }
         &:hover[type="submit"],
         &:focus[type="submit"] {
-            background-color: $enews__submitButtonBackground__HoverColor;
-            color: $enews__submitButton__HoverColor;
+            background-color: $enews__submit-buttonBackground--hover-color;
+            color: $enews__submit-button--hover-color;
         }
     }
 }
 
 .enews-widget {
     input {
-        font-size: rem ($news__FontSize);
+        font-size: rem ($news--font-size);
         margin-bottom: 16px;
         &[type="submit"] {
             margin: 0;
