--- a/assets/sass/utilities/variables/_typography.scss
+++ b/assets/sass/utilities/variables/_typography.scss
@@ -2,114 +2,114 @@
  * Common Fonts 
  *-------------------------------*/
 
-$fontFamily__SourceSansPro: "Source Sans Pro",
+$font-family--source-sans-pro: "Source Sans Pro",
 sans-serif;
 
 /*
  * Base Typography 
  *-------------------------------*/
 
-$html__FontSize: 62.5%;
-$base__FontFamily: $fontFamily__SourceSansPro,
+$html--font-size: 62.5%;
+$base--font-family: $font-family--source-sans-pro,
 sans-serif;
-$base__FontSize: 20;
-$base__LineHeight: 1.625;
-$base__FontSize__SmallScreenWidth: 18;
-$baseDiv__FontSize: 20;
-$baseDiv__FontSize__SmallScreenWidth: 18;
+$base--font-size: 20;
+$base--line-height: 1.625;
+$base--font-size--small-screen-width: 18;
+$base__div--font-size: 20;
+$base__div--font-size--small-screen-width: 18;
 
 /*
  * Headings 
  *-------------------------------*/
 
-$headings__FontFamily: $fontFamily__SourceSansPro;
-$headings__LineHeight: 1.2;
-$h1__FontSize: 36;
-$h2__FontSize: 30;
-$h3__FontSize: 24;
-$h4__FontSize: 20;
-$h5__FontSize: 18;
-$h6__FontSize: 16;
+$headings--font-family: $font-family--source-sans-pro;
+$headings--line-height: 1.2;
+$h1--font-size: 36;
+$h2--font-size: 30;
+$h3--font-size: 24;
+$h4--font-size: 20;
+$h5--font-size: 18;
+$h6--font-size: 16;
 
 /*
  * Elements 
  *-------------------------------*/
 
-$blockquote__FontSize: 30;
+$blockquote--font-size: 30;
 
 /*
  * Form Elements 
  *-------------------------------*/
 
-$input__FontSize: 18;
-$button__FontSize: 16;
+$input--font-size: 18;
+$button--font-size: 16;
 
 /*
  * Navigation
  *-------------------------------*/
 
-$nav__FontSize: 16;
-$submenu__FontSize: 14;
-$primaryNav__FontSize: 14;
-$archivePagination__FontSize: 16;
-$breadcrumbs__FontSize: 16;
+$nav--font-size: 16;
+$submenu--font-size: 14;
+$primary-nav--font-size: 14;
+$archive-pagination--font-size: 16;
+$breadcrumbs--font-size: 16;
 
 /*
  * Header
  *-------------------------------*/
 
-$siteTitle__FontSize: 30;
-$siteTitle__LineHeight: 1.2;
-$siteDescription__FontSize: 16;
-$siteDescription__LineHeight: 1.5;
+$site-title--font-size: 30;
+$site-title--line-height: 1.2;
+$site-description--font-size: 16;
+$site-description--line-height: 1.5;
 
 /*
  * Footer
  *-------------------------------*/
 
-$siteFooter__FontSize: 16;
-$footerWidgts_FontSize: 18;
+$site-footer--font-size: 16;
+$footer-widgets--font-size: 18;
 
 /*
  * Entry Content
  *-------------------------------*/
 
-$entryMeta_FontSize: 16;
-$entryMeta__Header__FontSize: 16;
-$entryMeta__Footer__FontSize: 16;
-$entryTitle__FontSize: 36;
-$afterEntry__FontSize: 18;
+$entry-meta--font-size: 16;
+$entry-header__entry-meta--font-size: 16;
+$entry-footer__entry-meta--font-size: 16;
+$entry-title--font-size: 36;
+$after-entry--font-size: 18;
 
 /*
  * Comments
  *-------------------------------*/
 
-$comments__FontSize: 16;
+$comments--font-size: 16;
 
 /*
  * Author Box
  *-------------------------------*/
 
-$authorbox__FontSize: 18;
-$authorbox__Title__FontSize: 18;
+$author-box--font-size: 18;
+$author-box-title--font-size: 18;
 
 /*
  * Widgets
  *-------------------------------*/
 
-$widget__FontSize: 16;
-$widgetTitle__FontSize: 18;
-$featuredContent__EntryTitle__FontSize: 20;
+$widget--font-size: 16;
+$widget-title--font-size: 18;
+$featured-content__entry-title--font-size: 20;
 
 /*
  * Plugins
  *-------------------------------*/
 
-$enews__FontSize: 16;
+$enews--font-size: 16;
 
 /*
  * Archive
  *-------------------------------*/
 
-$archiveDescription__FontSize: 18;
-$archiveTitle__FontSize: 20;
+$archive-description--font-size: 18;
+$archive-title--font-size: 20;
