--- a/assets/sass/views/archive/_description.scss
+++ b/assets/sass/views/archive/_description.scss
@@ -1,12 +1,12 @@
 .archive-description {
-    background-color: $archiveDescription__BackgroundColor;
-    font-size: rem($archiveDescription__FontSize);
+    background-color: $archive-description--background-color;
+    font-size: rem($archive-description--font-size);
     margin-bottom: 40px;
     padding: 60px;
     p:last-child {
         margin-bottom: 0;
     }
-    @media screen and (max-width: $smallScreen) {
+    @media screen and (max-width: $screen-size--small) {
         padding: 30px;
         margin-bottom: 5%;
     }
