--- a/assets/sass/views/archive/_title.scss
+++ b/assets/sass/views/archive/_title.scss
@@ -1,4 +1,4 @@
 .archive-description .entry-title,
 .archive-title {
-    font-size: rem( $archiveTitle__FontSize);
+    font-size: rem( $archive-title--font-size);
 }
