completed Part 3a, Pixel to Rem. However, something is wrong. No units on font sizes, no fallback to pixels

--- a/assets/sass/base/elements/index.scss
+++ b/assets/sass/base/elements/index.scss
@@ -1,7 +1,7 @@
 /* # Defaults
   ---------------------------------------------------------------------------------------------------- */
 
-@import "defaults";
+@import "default";
 @import "lists";
 @import "blockquote";
 @import "headings";
