--- a/assets/sass/components/header/title-area/_header-image.scss
+++ b/assets/sass/components/header/title-area/_header-image.scss
@@ -1,7 +1,7 @@
 .header-image {
     .title-area {
         margin: 0 auto;
-        max-width: $titleArea_Width;
+        max-width: $title-area--width;
         padding: 0;
         @include media($breakpoint__screen-size--medium) {
             float: none;
