--- a/assets/sass/components/index.scss
+++ b/assets/sass/components/index.scss
@@ -9,7 +9,7 @@
 @import "navigation/index";
 @import "content/index";
 @import "after-entry/index";
-@import "author-box";
+@import "author-box/index";
 @import "comments/index";
 @import "sidebars/index";
 @import "widgets/index";
