--- a/assets/sass/components/navigation/_js-enabled.scss
+++ b/assets/sass/components/navigation/_js-enabled.scss
@@ -59,7 +59,7 @@
             nav button:hover,
             .menu-toggle:hover,
             .nav-primary {
-                color: $js-nav_HoverColor;
+                color: $js-nav--hover-color;
             }
             nav button:focus,
             .menu-toggle:focus {
