--- a/assets/sass/utilities/variables/_typography.scss
+++ b/assets/sass/utilities/variables/_typography.scss
@@ -10,6 +10,7 @@ sans-serif;
  *-------------------------------*/
 
 $html--font-size: 62.5%;
+//$em-base: 10px;
 $base--font-family: $font-family--source-sans-pro,
 sans-serif;
 $base--font-size: 20;
