--- a/assets/sass/base/elements/_body.scss
+++ b/assets/sass/base/elements/_body.scss
@@ -10,19 +10,19 @@ body {
     background-color: $body--background-color;
     color: $base--color;
     font-family: $base--font-family;
-    font-size: rem($base--font-size);
+    @include rem(font-size, $base--font-size);
     -webkit-font-smoothing: antialiased;
     font-weight: 400;
     line-height: $base--line-height;
     margin: 0;
     @media screen and (max-width: $screen-size--small) {
-        font-size: rem($base--font-size--small-screen-width);
+        @include rem(font-size, $base--font-size--small-screen-width);
     }
     /* Chrome fix */
     >div {
-        font-size: rem($base__div--font-size);
+        @include rem(font-size, $base__div--font-size);
         @media screen and (max-width: $screen-size--small) {
-            font-size: rem($base__div--font-size--small-screen-width);
+            @include rem(font-size, $base__div--font-size--small-screen-width);
         }
     }
 }
