--- a/assets/sass/base/elements/_forms.scss
+++ b/assets/sass/base/elements/_forms.scss
@@ -43,7 +43,7 @@ input[type="submit"],
     border: 0;
     color: $button--text-color;
     cursor: pointer;
-    font-size: rem($button--font-size);
+    @include rem(font-size, $button--font-size);
     font-weight: 700;
     padding: 16px 24px;
     text-decoration: none;
