--- a/assets/sass/components/comments/_base.scss
+++ b/assets/sass/components/comments/_base.scss
@@ -6,7 +6,7 @@
 .entry-comments,
 .entry-pings {
     background-color: $comment--background-color;
-    font-size: rem( $comments--font-size);
+    @include rem(font-size, $comments--font-size);
     margin-bottom: 40px;
     @include media($breakpoint__screen-size--small) {
         padding: 30px;
