--- a/assets/sass/components/footer/_site-footer.scss
+++ b/assets/sass/components/footer/_site-footer.scss
@@ -4,7 +4,7 @@
 .site-footer {
     background-color: $site-footer--background-color;
     border-top: 1px solid $site-footer--border-color;
-    font-size: rem( $site-footer--font-size);
+    @include rem(font-size, $site-footer--font-size);
     font-size: 1.6rem;
     line-height: 1;
     padding: 60px 0;
