--- a/assets/sass/components/navigation/_breadcrumbs.scss
+++ b/assets/sass/components/navigation/_breadcrumbs.scss
@@ -3,7 +3,7 @@
 
 .breadcrumb {
     background-color: $breadcrumbs--background-color;
-    font-size: rem ( $breadcrumbs_FontSize);
+    font-size: rem ( $breadcrumbs--font-size);
     margin-bottom: 1px;
     padding: 12px 30px;
 }
