--- a/assets/sass/components/sidebars/_base.scss
+++ b/assets/sass/components/sidebars/_base.scss
@@ -1,5 +1,5 @@
 .sidebar {
-    font-size: rem($widget--font-size);
+    @include rem(font-size, $widget--font-size);
     margin-bottom: 40px;
     .widget {
         background-color: $widget--background-color;
