--- a/assets/sass/components/widgets/_featured-content.scss
+++ b/assets/sass/components/widgets/_featured-content.scss
@@ -10,6 +10,6 @@
         }
     }
     .entry-title {
-        font-size: rem( $featured-content__entry-title--font-size);
+        @include rem(font-size, $featured-content__entry-title--font-size);
     }
 }
