--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -17,6 +17,9 @@
 	Text Domain: developers
 */
 
+@import "bourbon";
+@import "neat";
+@import "../../node_modules/sass-rem/rem";
 @import "utilities/index";
 @import "base/index";
 @import "layouts/index";
