--- a/assets/sass/views/archive/_description.scss
+++ b/assets/sass/views/archive/_description.scss
@@ -1,6 +1,6 @@
 .archive-description {
     background-color: $archive-description--background-color;
-    font-size: rem($archive-description--font-size);
+    @include rem(font-size, $archive-description--font-size);
     margin-bottom: 40px;
     padding: 60px;
     p:last-child {
@@ -10,7 +10,4 @@
         padding: 30px;
         margin-bottom: 5%;
     }
-}
-
-
 }
